[tool.poetry]
name = "btfnpz-helper"
version = "0.1.0"
description = ".btf.npz file helper."
authors = ["2-propanol <nuclear.fusion.247@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/2-propanol/btfnpz_helper"
license = "zlib license"
packages = [
    { include = "btf_extractor"},
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19"
Pillow = "^8"
tqdm = "^4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
ptpython = "^3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
