[tool.poetry]
name = "btf_helper"
version = "0.3.0"
description = "Extract home-brewed BTF format."
authors = ["2-propanol <nuclear.fusion.247@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/2-propanol/btfnpz_helper"
license = "zlib license"
packages = [
    { include = "btf_helper"},
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19"
tqdm = "^4"

[tool.poetry.dev-dependencies]
black = "^21.4b2"
ptpython = "^3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
